# os_lab3.-Shared-mem

./: CMakeLists.txt  README.md
include/api/: app.h  shared.h
include/internal/: platform.h  platform_fs.h  platform_io.h
scripts/: build_linux.sh  build_windows.cmd  cleanup.sh  demo.sh
src/: app.c  cleanup_tool.c  main.c  platform.c  platform_fs.c  platform_io.c  shared.c
